
An entry should be made for _every_ commit to the repository.
The entries in this file will be used when creating the README
for new versions, so keep that in mind when writing the
description.

The form of an entry should be:

Name: 
Date: yyyy/mm/dd
Tag: <post-commit CVS tag>
Description:

----------------------------------------------------------------------
Name: Matthias Blume (http://www.tti-c.org/blume/)
Date: 2006/03/01 22:15:00 CST
Tag: blume-20060301-lexgen
Description:

Incorporated several bugfixes to lexgen.  Compiler now compiles to
fixpoint when using lexgen instead of ml-lex.

----------------------------------------------------------------------
Name: Matthias Blume (http://www.tti-c.org/blume/)
Date: 2006/02/28 22:45:00 CST
Tag: blume-20060228-lexgen
Description:

Removed ml-flex and added lexgen instead, using Aaron Turon's newly
provided tarball.  The generated lexers still have problems.

----------------------------------------------------------------------
Name: Matthias Blume (http://www.tti-c.org/blume/)
Date: 2006/02/26 23:30:00 CST
Tag: blume-20060226-ml-flex
Description:

Removed ml-flex' dependency on regexp-lib.cm.  Turned installation
of ml-flex on by default.

----------------------------------------------------------------------
Name: Matthias Blume (http://www.tti-c.org/blume/)
Date: 2006/02/24 16:30:00 CST
Tag: blume-20060224-ml-flex
Description:

Added ml-flex sources.  Partially integrated, but should not be
turned on yet!  (Read: leave it commented-out in config/targets!)

----------------------------------------------------------------------
Name: John Reppy (http://www.cs.uchicago.edu/~jhr)
Date: 2006/02/23
Tag: jhr-20060223-x86-64
Description:
Changes to support building on x86-64 systems (using the 32-bit mode).
Also cleaned up signal handling on Linux.  Support for pre-2.2 Linux
kernels dropped.

----------------------------------------------------------------------
Name: Allen Leung (leunga (at) reservoir (dot) com)