@@ -1,6 +1,12 @@
 BOOT: the location of the latest boot files.
 ----------------------------------------------------------------------
 Name: Matthias Blume
+Date: 2006/03/02 17:30:00 CDT
+Tag: Release_110_58
+Version: 110.58
+Location: http://smlnj.cs.uchicago.edu/dist/working/110.58/
+----------------------------------------------------------------------
+Name: Matthias Blume
 Date: 2005/11/16 15:00:00 CDT
 Tag: Release_110_57
 Version: 110.57
